sql_parser.output
Terminals unused in grammar

    RENAME
    TO
    INDEX
    USING
    MOD
    CONCAT


State 266 conflicts: 2 reduce/reduce


Grammar

    0 $accept: query_script $end

    1 query_script: statement_list opt_semicolon
    2             | ε

    3 opt_semicolon: SEMICOLON
    4              | ε

    5 statement_list: statement_list SEMICOLON statement
    6               | statement

    7 statement: select_stmt
    8          | insert_stmt
    9          | update_stmt
   10          | delete_stmt
   11          | create_table_stmt
   12          | alter_table_stmt
   13          | drop_table_stmt
   14          | truncate_table_stmt
   15          | transaction_stmt

   16 select_stmt: select_expr
   17            | select_stmt UNION opt_all select_expr
   18            | select_stmt EXCEPT select_expr
   19            | select_stmt INTERSECT select_expr

   20 opt_all: ALL
   21        | ε

   22 select_expr: SELECT opt_distinct target_list opt_from opt_where opt_group_by opt_having opt_order_by opt_limit

   23 opt_distinct: DISTINCT
   24             | ALL
   25             | ε

   26 target_list: target_list COMMA target_item
   27            | target_item

   28 target_item: STAR
   29            | expr opt_alias

   30 opt_alias: AS IDENTIFIER
   31          | IDENTIFIER
   32          | ε

   33 opt_from: FROM from_clause
   34         | ε

   35 from_clause: table_ref_list

   36 table_ref_list: table_ref_list COMMA table_ref
   37               | table_ref

   38 table_ref: IDENTIFIER opt_alias
   39          | LPAREN select_stmt RPAREN AS IDENTIFIER
   40          | table_ref join_type table_ref ON expr

   41 join_type: JOIN
   42          | INNER JOIN
   43          | LEFT JOIN
   44          | LEFT OUTER JOIN
   45          | RIGHT JOIN
   46          | RIGHT OUTER JOIN
   47          | FULL JOIN
   48          | FULL OUTER JOIN
   49          | CROSS JOIN

   50 opt_where: WHERE expr
   51          | ε

   52 opt_group_by: GROUP BY expr_list
   53             | ε

   54 opt_having: HAVING expr
   55           | ε

   56 opt_order_by: ORDER BY order_item_list
   57             | ε

   58 order_item_list: order_item_list COMMA order_item
   59                | order_item

   60 order_item: expr opt_asc_desc

   61 opt_asc_desc: ASC
   62             | DESC
   63             | ε

   64 opt_limit: LIMIT INT_LITERAL
   65          | LIMIT INT_LITERAL OFFSET INT_LITERAL
   66          | ε

   67 insert_stmt: INSERT INTO IDENTIFIER VALUES insert_values_list
   68            | INSERT INTO IDENTIFIER LPAREN expr_list RPAREN VALUES insert_values_list
   69            | INSERT INTO IDENTIFIER select_stmt

   70 insert_values_list: tuple_list

   71 tuple_list: tuple_list COMMA tuple
   72           | tuple

   73 tuple: LPAREN expr_list RPAREN

   74 update_stmt: UPDATE IDENTIFIER SET assignment_list opt_where

   75 assignment_list: assignment_list COMMA assignment
   76                | assignment

   77 assignment: IDENTIFIER EQ expr

   78 delete_stmt: DELETE FROM IDENTIFIER opt_where

   79 create_table_stmt: CREATE TABLE IDENTIFIER LPAREN column_def_list RPAREN
   80                  | CREATE TABLE IF_KW NOT_KW EXISTS IDENTIFIER LPAREN column_def_list RPAREN

   81 column_def_list: column_def_list COMMA column_def
   82                | column_def

   83 column_def: IDENTIFIER data_type opt_column_constraints
   84           | PRIMARY KEY LPAREN IDENTIFIER RPAREN
   85           | FOREIGN KEY LPAREN IDENTIFIER RPAREN REFERENCES IDENTIFIER LPAREN IDENTIFIER RPAREN
   86           | CONSTRAINT IDENTIFIER PRIMARY KEY LPAREN IDENTIFIER RPAREN
   87           | CONSTRAINT IDENTIFIER FOREIGN KEY LPAREN IDENTIFIER RPAREN REFERENCES IDENTIFIER LPAREN IDENTIFIER RPAREN
   88           | CHECK LPAREN expr RPAREN
   89           | CONSTRAINT IDENTIFIER CHECK LPAREN expr RPAREN

   90 data_type: INT_TYPE
   91          | BIGINT_TYPE
   92          | SMALLINT_TYPE
   93          | TINYINT_TYPE
   94          | NUMBER_TYPE
   95          | NUMBER_TYPE LPAREN INT_LITERAL RPAREN
   96          | NUMBER_TYPE LPAREN INT_LITERAL COMMA INT_LITERAL RPAREN
   97          | NUMERIC_TYPE
   98          | NUMERIC_TYPE LPAREN INT_LITERAL COMMA INT_LITERAL RPAREN
   99          | VARCHAR_TYPE LPAREN INT_LITERAL RPAREN
  100          | VARCHAR2_TYPE LPAREN INT_LITERAL RPAREN
  101          | CHAR_TYPE
  102          | CHAR_TYPE LPAREN INT_LITERAL RPAREN
  103          | TEXT_TYPE
  104          | FLOAT_TYPE
  105          | DOUBLE_TYPE
  106          | REAL_TYPE
  107          | DECIMAL_TYPE
  108          | DECIMAL_TYPE LPAREN INT_LITERAL COMMA INT_LITERAL RPAREN
  109          | BOOLEAN_TYPE
  110          | DATE_TYPE
  111          | DATETIME_TYPE
  112          | TIMESTAMP_TYPE
  113          | BLOB_TYPE
  114          | CLOB_TYPE

  115 opt_column_constraints: opt_column_constraints column_constraint
  116                       | ε

  117 column_constraint: PRIMARY KEY
  118                  | NOT_KW NULL_KW
  119                  | UNIQUE
  120                  | AUTO_INCREMENT
  121                  | DEFAULT expr
  122                  | CHECK LPAREN expr RPAREN
  123                  | CONSTRAINT IDENTIFIER CHECK LPAREN expr RPAREN
  124                  | CONSTRAINT IDENTIFIER PRIMARY KEY
  125                  | CONSTRAINT IDENTIFIER UNIQUE

  126 alter_table_stmt: ALTER TABLE IDENTIFIER ADD opt_column column_def
  127                 | ALTER TABLE IDENTIFIER ADD opt_column LPAREN column_def_list RPAREN
  128                 | ALTER TABLE IDENTIFIER MODIFY opt_column column_def
  129                 | ALTER TABLE IDENTIFIER MODIFY opt_column LPAREN column_def_list RPAREN
  130                 | ALTER TABLE IDENTIFIER DROP opt_column IDENTIFIER
  131                 | ALTER TABLE IDENTIFIER DROP opt_column LPAREN identifier_list RPAREN

  132 opt_column: COLUMN
  133           | ε

  134 identifier_list: identifier_list COMMA IDENTIFIER
  135                | IDENTIFIER

  136 drop_table_stmt: DROP TABLE IDENTIFIER
  137                | DROP TABLE IF_KW EXISTS IDENTIFIER

  138 truncate_table_stmt: TRUNCATE TABLE IDENTIFIER

  139 transaction_stmt: BEGIN_KW opt_transaction
  140                 | COMMIT
  141                 | ROLLBACK
  142                 | SAVEPOINT IDENTIFIER

  143 opt_transaction: TRANSACTION
  144                | ε

  145 expr_list: expr_list COMMA expr
  146          | expr

  147 expr: expr OR expr
  148     | expr AND expr
  149     | NOT_KW expr
  150     | expr EQ expr
  151     | expr NE expr
  152     | expr LT expr
  153     | expr GT expr
  154     | expr LE expr
  155     | expr GE expr
  156     | expr LIKE expr
  157     | expr IN LPAREN expr_list RPAREN
  158     | expr IN LPAREN select_stmt RPAREN
  159     | expr BETWEEN expr AND expr
  160     | expr IS NULL_KW
  161     | expr IS NOT_KW NULL_KW
  162     | expr PLUS expr
  163     | expr MINUS expr
  164     | expr STAR expr
  165     | expr SLASH expr
  166     | MINUS expr
  167     | LPAREN expr RPAREN
  168     | LPAREN select_stmt RPAREN
  169     | func_call
  170     | case_expr
  171     | IDENTIFIER
  172     | IDENTIFIER DOT IDENTIFIER
  173     | STRING_LITERAL
  174     | INT_LITERAL
  175     | FLOAT_LITERAL
  176     | NULL_KW

  177 func_call: aggregate_func LPAREN opt_distinct expr RPAREN
  178          | aggregate_func LPAREN STAR RPAREN
  179          | IDENTIFIER LPAREN opt_expr_list RPAREN

  180 opt_expr_list: expr_list
  181              | ε

  182 aggregate_func: COUNT
  183               | SUM
  184               | AVG
  185               | MIN
  186               | MAX

  187 case_expr: CASE when_then_list opt_else END

  188 when_then_list: when_then_list when_then_clause
  189               | when_then_clause

  190 when_then_clause: WHEN expr THEN expr

  191 opt_else: ELSE expr
  192         | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SELECT <str> (258) 22
    FROM <str> (259) 33 78
    WHERE <str> (260) 50
    GROUP <str> (261) 52
    BY <str> (262) 52 56
    HAVING <str> (263) 54
    ORDER <str> (264) 56
    ASC <str> (265) 61
    DESC <str> (266) 62
    LIMIT <str> (267) 64 65
    OFFSET <str> (268) 65
    AS <str> (269) 30 39
    DISTINCT <str> (270) 23
    ALL <str> (271) 20 24
    INSERT <str> (272) 67 68 69
    INTO <str> (273) 67 68 69
    VALUES <str> (274) 67 68
    UPDATE <str> (275) 74
    SET <str> (276) 74
    DELETE <str> (277) 78
    CREATE <str> (278) 79 80
    TABLE <str> (279) 79 80 126 127 128 129 130 131 136 137 138
    ALTER <str> (280) 126 127 128 129 130 131
    ADD <str> (281) 126 127
    MODIFY <str> (282) 128 129
    DROP <str> (283) 130 131 136 137
    TRUNCATE <str> (284) 138
    RENAME <str> (285)
    TO <str> (286)
    COLUMN <str> (287) 132
    INDEX <str> (288)
    PRIMARY <str> (289) 84 86 117 124
    KEY <str> (290) 84 85 86 87 117 124
    FOREIGN <str> (291) 85 87
    REFERENCES <str> (292) 85 87
    NULL_KW <str> (293) 118 160 161 176
    UNIQUE <str> (294) 119 125
    DEFAULT <str> (295) 121
    CHECK <str> (296) 88 89 122 123
    CONSTRAINT <str> (297) 86 87 89 123 124 125
    AUTO_INCREMENT <str> (298) 120
    INT_TYPE <str> (299) 90
    BIGINT_TYPE <str> (300) 91
    SMALLINT_TYPE <str> (301) 92
    TINYINT_TYPE <str> (302) 93
    NUMBER_TYPE <str> (303) 94 95 96
    NUMERIC_TYPE <str> (304) 97 98
    VARCHAR_TYPE <str> (305) 99
    VARCHAR2_TYPE <str> (306) 100
    CHAR_TYPE <str> (307) 101 102
    TEXT_TYPE <str> (308) 103
    FLOAT_TYPE <str> (309) 104
    DOUBLE_TYPE <str> (310) 105
    REAL_TYPE <str> (311) 106
    DECIMAL_TYPE <str> (312) 107 108
    BOOLEAN_TYPE <str> (313) 109
    DATE_TYPE <str> (314) 110
    DATETIME_TYPE <str> (315) 111
    TIMESTAMP_TYPE <str> (316) 112
    BLOB_TYPE <str> (317) 113
    CLOB_TYPE <str> (318) 114
    JOIN <str> (319) 41 42 43 44 45 46 47 48 49
    INNER <str> (320) 42
    LEFT <str> (321) 43 44
    RIGHT <str> (322) 45 46
    FULL <str> (323) 47 48
    OUTER <str> (324) 44 46 48
    CROSS <str> (325) 49
    ON <str> (326) 40
    USING <str> (327)
    UNION <str> (328) 17
    INTERSECT <str> (329) 19
    EXCEPT <str> (330) 18
    AND <str> (331) 148 159
    OR <str> (332) 147
    NOT_KW <str> (333) 80 118 149 161
    LIKE <str> (334) 156
    IN <str> (335) 157 158
    BETWEEN <str> (336) 159
    IS <str> (337) 160 161
    EXISTS <str> (338) 80 137
    CASE <str> (339) 187
    WHEN <str> (340) 190
    THEN <str> (341) 190
    ELSE <str> (342) 191
    END <str> (343) 187
    IF_KW <str> (344) 80 137
    BEGIN_KW <str> (345) 139
    TRANSACTION <str> (346) 143
    COMMIT <str> (347) 140
    ROLLBACK <str> (348) 141
    SAVEPOINT <str> (349) 142
    COUNT <str> (350) 182
    SUM <str> (351) 183
    AVG <str> (352) 184
    MIN <str> (353) 185
    MAX <str> (354) 186
    IDENTIFIER <str> (355) 30 31 38 39 67 68 69 74 77 78 79 80 83 84 85 86 87 89 123 124 125 126 127 128 129 130 131 134 135 136 137 138 142 171 172 179
    STRING_LITERAL <str> (356) 173
    INT_LITERAL <str> (357) 64 65 95 96 98 99 100 102 108 174
    FLOAT_LITERAL <str> (358) 175
    EQ <str> (359) 77 150
    NE <str> (360) 151
    LT <str> (361) 152
    GT <str> (362) 153
    LE <str> (363) 154
    GE <str> (364) 155
    PLUS <str> (365) 162
    MINUS <str> (366) 163 166
    STAR <str> (367) 28 164 178
    SLASH <str> (368) 165
    MOD <str> (369)
    CONCAT <str> (370)
    COMMA <str> (371) 26 36 58 71 75 81 96 98 108 134 145
    SEMICOLON <str> (372) 3 5
    LPAREN <str> (373) 39 68 73 79 80 84 85 86 87 88 89 95 96 98 99 100 102 108 122 123 127 129 131 157 158 167 168 177 178 179
    RPAREN <str> (374) 39 68 73 79 80 84 85 86 87 88 89 95 96 98 99 100 102 108 122 123 127 129 131 157 158 167 168 177 178 179
    DOT <str> (375) 172
    UNARY (376)


Nonterminals, with rules where they appear

    $accept (122)
        on left: 0
    query_script <node> (123)
        on left: 1 2
        on right: 0
    opt_semicolon (124)
        on left: 3 4
        on right: 1
    statement_list <node> (125)
        on left: 5 6
        on right: 1 5
    statement <node> (126)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 5 6
    select_stmt <node> (127)
        on left: 16 17 18 19
        on right: 7 17 18 19 39 69 158 168
    opt_all (128)
        on left: 20 21
        on right: 17
    select_expr <node> (129)
        on left: 22
        on right: 16 17 18 19
    opt_distinct (130)
        on left: 23 24 25
        on right: 22 177
    target_list <node> (131)
        on left: 26 27
        on right: 22 26
    target_item <node> (132)
        on left: 28 29
        on right: 26 27
    opt_alias (133)
        on left: 30 31 32
        on right: 29 38
    opt_from <node> (134)
        on left: 33 34
        on right: 22
    from_clause <node> (135)
        on left: 35
        on right: 33
    table_ref_list <node> (136)
        on left: 36 37
        on right: 35 36
    table_ref <node> (137)
        on left: 38 39 40
        on right: 36 37 40
    join_type <node> (138)
        on left: 41 42 43 44 45 46 47 48 49
        on right: 40
    opt_where <node> (139)
        on left: 50 51
        on right: 22 74 78
    opt_group_by <node> (140)
        on left: 52 53
        on right: 22
    opt_having <node> (141)
        on left: 54 55
        on right: 22
    opt_order_by <node> (142)
        on left: 56 57
        on right: 22
    order_item_list <node> (143)
        on left: 58 59
        on right: 56 58
    order_item <node> (144)
        on left: 60
        on right: 58 59
    opt_asc_desc <node> (145)
        on left: 61 62 63
        on right: 60
    opt_limit <node> (146)
        on left: 64 65 66
        on right: 22
    insert_stmt <node> (147)
        on left: 67 68 69
        on right: 8
    insert_values_list <node> (148)
        on left: 70
        on right: 67 68
    tuple_list <node> (149)
        on left: 71 72
        on right: 70 71
    tuple <node> (150)
        on left: 73
        on right: 71 72
    update_stmt <node> (151)
        on left: 74
        on right: 9
    assignment_list <node> (152)
        on left: 75 76
        on right: 74 75
    assignment <node> (153)
        on left: 77
        on right: 75 76
    delete_stmt <node> (154)
        on left: 78
        on right: 10
    create_table_stmt <node> (155)
        on left: 79 80
        on right: 11
    column_def_list <node> (156)
        on left: 81 82
        on right: 79 80 81 127 129
    column_def <node> (157)
        on left: 83 84 85 86 87 88 89
        on right: 81 82 126 128
    data_type <node> (158)
        on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
        on right: 83
    opt_column_constraints <node> (159)
        on left: 115 116
        on right: 83 115
    column_constraint <node> (160)
        on left: 117 118 119 120 121 122 123 124 125
        on right: 115
    alter_table_stmt <node> (161)
        on left: 126 127 128 129 130 131
        on right: 12
    opt_column (162)
        on left: 132 133
        on right: 126 127 128 129 130 131
    identifier_list <node> (163)
        on left: 134 135
        on right: 131 134
    drop_table_stmt <node> (164)
        on left: 136 137
        on right: 13
    truncate_table_stmt <node> (165)
        on left: 138
        on right: 14
    transaction_stmt <node> (166)
        on left: 139 140 141 142
        on right: 15
    opt_transaction (167)
        on left: 143 144
        on right: 139
    expr_list <node> (168)
        on left: 145 146
        on right: 52 68 73 145 157 180
    expr <node> (169)
        on left: 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176
        on right: 29 40 50 54 60 77 88 89 121 122 123 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 177 190 191
    func_call <node> (170)
        on left: 177 178 179
        on right: 169
    opt_expr_list <node> (171)
        on left: 180 181
        on right: 179
    aggregate_func <node> (172)
        on left: 182 183 184 185 186
        on right: 177 178
    case_expr <node> (173)
        on left: 187
        on right: 170
    when_then_list <node> (174)
        on left: 188 189
        on right: 187 188
    when_then_clause <node> (175)
        on left: 190
        on right: 188 189
    opt_else <node> (176)
        on left: 191 192
        on right: 187


State 0

    0 $accept: • query_script $end

    SELECT     shift, and go to state 1
    INSERT     shift, and go to state 2
    UPDATE     shift, and go to state 3
    DELETE     shift, and go to state 4
    CREATE     shift, and go to state 5
    ALTER      shift, and go to state 6
    DROP       shift, and go to state 7
    TRUNCATE   shift, and go to state 8
    BEGIN_KW   shift, and go to state 9
    COMMIT     shift, and go to state 10
    ROLLBACK   shift, and go to state 11
    SAVEPOINT  shift, and go to state 12

    $default  reduce using rule 2 (query_script)

    query_script         go to state 13
    statement_list       go to state 14
    statement            go to state 15
    select_stmt          go to state 16
    select_expr          go to state 17
    insert_stmt          go to state 18
    update_stmt          go to state 19
    delete_stmt          go to state 20
    create_table_stmt    go to state 21
    alter_table_stmt     go to state 22
    drop_table_stmt      go to state 23
    truncate_table_stmt  go to state 24
    transaction_stmt     go to state 25


State 1

   22 select_expr: SELECT • opt_distinct target_list opt_from opt_where opt_group_by opt_having opt_order_by opt_limit

    DISTINCT  shift, and go to state 26
    ALL       shift, and go to state 27

    $default  reduce using rule 25 (opt_distinct)

    opt_distinct  go to state 28


State 2

   67 insert_stmt: INSERT • INTO IDENTIFIER VALUES insert_values_list
   68            | INSERT • INTO IDENTIFIER LPAREN expr_list RPAREN VALUES insert_values_list
   69            | INSERT • INTO IDENTIFIER select_stmt

    INTO  shift, and go to state 29


State 3

   74 update_stmt: UPDATE • IDENTIFIER SET assignment_list opt_where

    IDENTIFIER  shift, and go to state 30


State 4

   78 delete_stmt: DELETE • FROM IDENTIFIER opt_where

    FROM  shift, and go to state 31


State 5

   79 create_table_stmt: CREATE • TABLE IDENTIFIER LPAREN column_def_list RPAREN
   80                  | CREATE • TABLE IF_KW NOT_KW EXISTS IDENTIFIER LPAREN column_def_list RPAREN

    TABLE  shift, and go to state 32


State 6

  126 alter_table_stmt: ALTER • TABLE IDENTIFIER ADD opt_column column_def
  127                 | ALTER • TABLE IDENTIFIER ADD opt_column LPAREN column_def_list RPAREN
  128                 | ALTER • TABLE IDENTIFIER MODIFY opt_column column_def
  129                 | ALTER • TABLE IDENTIFIER MODIFY opt_column LPAREN column_def_list RPAREN
  130                 | ALTER • TABLE IDENTIFIER DROP opt_column IDENTIFIER
  131                 | ALTER • TABLE IDENTIFIER DROP opt_column LPAREN identifier_list RPAREN

    TABLE  shift, and go to state 33


State 7

  136 drop_table_stmt: DROP • TABLE IDENTIFIER
  137                | DROP • TABLE IF_KW EXISTS IDENTIFIER

    TABLE  shift, and go to state 34


State 8

  138 truncate_table_stmt: TRUNCATE • TABLE IDENTIFIER

    TABLE  shift, and go to state 35


State 9

  139 transaction_stmt: BEGIN_KW • opt_transaction

    TRANSACTION  shift, and go to state 36

    $default  reduce using rule 144 (opt_transaction)

    opt_transaction  go to state 37


State 10

  140 transaction_stmt: COMMIT •

    $default  reduce using rule 140 (transaction_stmt)


State 11

  141 transaction_stmt: ROLLBACK •

    $default  reduce using rule 141 (transaction_stmt)


State 12

  142 transaction_stmt: SAVEPOINT • IDENTIFIER

    IDENTIFIER  shift, and go to state 38


State 13

    0 $accept: query_script • $end

    $end  shift, and go to state 39


State 14

    1 query_script: statement_list • opt_semicolon
    5 statement_list: statement_list • SEMICOLON statement

    SEMICOLON  shift, and go to state 40

    $default  reduce using rule 4 (opt_semicolon)

    opt_semicolon  go to state 41


State 15

    6 statement_list: statement •

    $default  reduce using rule 6 (statement_list)


State 16

    7 statement: select_stmt •
   17 select_stmt: select_stmt • UNION opt_all select_expr
   18            | select_stmt • EXCEPT select_expr
   19            | select_stmt • INTERSECT select_expr

    UNION      shift, and go to state 42
    INTERSECT  shift, and go to state 43
    EXCEPT     shift, and go to state 44

    $default  reduce using rule 7 (statement)


State 17

   16 select_stmt: select_expr •

    $default  reduce using rule 16 (select_stmt)


State 18

    8 statement: insert_stmt •

    $default  reduce using rule 8 (statement)


State 19

    9 statement: update_stmt •

    $default  reduce using rule 9 (statement)


State 20

   10 statement: delete_stmt •

    $default  reduce using rule 10 (statement)


State 21

   11 statement: create_table_stmt •

    $default  reduce using rule 11 (statement)


State 22

   12 statement: alter_table_stmt •

    $default  reduce using rule 12 (statement)


State 23

   13 statement: drop_table_stmt •

    $default  reduce using rule 13 (statement)


State 24

   14 statement: truncate_table_stmt •

    $default  reduce using rule 14 (statement)


State 25

   15 statement: transaction_stmt •

    $default  reduce using rule 15 (statement)


State 26

   23 opt_distinct: DISTINCT •

    $default  reduce using rule 23 (opt_distinct)


State 27

   24 opt_distinct: ALL •

    $default  reduce using rule 24 (opt_distinct)


State 28

   22 select_expr: SELECT opt_distinct • target_list opt_from opt_where opt_group_by opt_having opt_order_by opt_limit

    NULL_KW         shift, and go to state 45
    NOT_KW          shift, and go to state 46
    CASE            shift, and go to state 47
    COUNT           shift, and go to state 48
    SUM             shift, and go to state 49
    AVG             shift, and go to state 50
    MIN             shift, and go to state 51
    MAX             shift, and go to state 52
    IDENTIFIER      shift, and go to state 53
    STRING_LITERAL  shift, and go to state 54
    INT_LITERAL     shift, and go to state 55
    FLOAT_LITERAL   shift, and go to state 56
    MINUS           shift, and go to state 57
    STAR            shift, and go to state 58
    LPAREN          shift, and go to state 59

    target_list     go to state 60
    target_item     go to state 61
    expr            go to state 62
    func_call       go to state 63
    aggregate_func  go to state 64
    case_expr       go to state 65


State 29

   67 insert_stmt: INSERT INTO • IDENTIFIER VALUES insert_values_list
   68            | INSERT INTO • IDENTIFIER LPAREN expr_list RPAREN VALUES insert_values_list
   69            | INSERT INTO • IDENTIFIER select_stmt

    IDENTIFIER  shift, and go to state 66


State 30

   74 update_stmt: UPDATE IDENTIFIER • SET assignment_list opt_where

    SET  shift, and go to state 67


State 31

   78 delete_stmt: DELETE FROM • IDENTIFIER opt_where

    IDENTIFIER  shift, and go to state 68


State 32

   79 create_table_stmt: CREATE TABLE • IDENTIFIER LPAREN column_def_list RPAREN
   80                  | CREATE TABLE • IF_KW NOT_KW EXISTS IDENTIFIER LPAREN column_def_list RPAREN

    IF_KW       shift, and go to state 69
    IDENTIFIER  shift, and go to state 70


State 33

  126 alter_table_stmt: ALTER TABLE • IDENTIFIER ADD opt_column column_def
  127                 | ALTER TABLE • IDENTIFIER ADD opt_column LPAREN column_def_list RPAREN
  128                 | ALTER TABLE • IDENTIFIER MODIFY opt_column column_def
  129                 | ALTER TABLE • IDENTIFIER MODIFY opt_column LPAREN column_def_list RPAREN
  130                 | ALTER TABLE • IDENTIFIER DROP opt_column IDENTIFIER
  131                 | ALTER TABLE • IDENTIFIER DROP opt_column LPAREN identifier_list RPAREN

    IDENTIFIER  shift, and go to state 71


State 34

  136 drop_table_stmt: DROP TABLE • IDENTIFIER
  137                | DROP TABLE • IF_KW EXISTS IDENTIFIER

    IF_KW       shift, and go to state 72
    IDENTIFIER  shift, and go to state 73


State 35

  138 truncate_table_stmt: TRUNCATE TABLE • IDENTIFIER

    IDENTIFIER  shift, and go to state 74


State 36

  143 opt_transaction: TRANSACTION •

    $default  reduce using rule 143 (opt_transaction)


State 37

  139 transaction_stmt: BEGIN_KW opt_transaction •

    $default  reduce using rule 139 (transaction_stmt)


State 38

  142 transaction_stmt: SAVEPOINT IDENTIFIER •

    $default  reduce using rule 142 (transaction_stmt)


State 39

    0 $accept: query_script $end •

    $default  accept


State 40

    3 opt_semicolon: SEMICOLON •
    5 statement_list: statement_list SEMICOLON • statement

    SELECT     shift, and go to state 1
    INSERT     shift, and go to state 2
    UPDATE     shift, and go to state 3
    DELETE     shift, and go to state 4
    CREATE     shift, and go to state 5
    ALTER      shift, and go to state 6
    DROP       shift, and go to state 7
    TRUNCATE   shift, and go to state 8
    BEGIN_KW   shift, and go to state 9
    COMMIT     shift, and go to state 10
    ROLLBACK   shift, and go to state 11
    SAVEPOINT  shift, and go to state 12

    $default  reduce using rule 3 (opt_semicolon)

    statement            go to state 75
    select_stmt          go to state 16
    select_expr          go to state 17
    insert_stmt          go to state 18
    update_stmt          go to state 19
    delete_stmt          go to state 20
    create_table_stmt    go to state 21
    alter_table_stmt     go to state 22
    drop_table_stmt      go to state 23
    truncate_table_stmt  go to state 24
    transaction_stmt     go to state 25


State 41

    1 query_script: statement_list opt_semicolon •

    $default  reduce using rule 1 (query_script)


State 42

   17 select_stmt: select_stmt UNION • opt_all select_expr

    ALL  shift, and go to state 76

    $default  reduce using rule 21 (opt_all)

    opt_all  go to state 77


State 43

   19 select_stmt: select_stmt INTERSECT • select_expr

    SELECT  shift, and go to state 1

    select_expr  go to state 78


State 44

   18 select_stmt: select_stmt EXCEPT • select_expr

    SELECT  shift, and go to state 1

    select_expr  go to state 79


State 45

  176 expr: NULL_KW •

    $default  reduce using rule 176 (expr)


State 46

  149 expr: NOT_KW • expr

    NULL_KW         shift, and go to state 45
    NOT_KW          shift, and go to state 46
    CASE            shift, and go to state 47
    COUNT           shift, and go to state 48
    SUM             shift, and go to state 49
    AVG             shift, and go to state 50
    MIN             shift, and go to state 51
    MAX             shift, and go to state 52
    IDENTIFIER      shift, and go to state 53
    STRING_LITERAL  shift, and go to state 54
    INT_LITERAL     shift, and go to state 55
    FLOAT_LITERAL   shift, and go to state 56
    MINUS           shift, and go to state 57
    LPAREN          shift, and go to state 59

    expr            go to state 80
    func_call       go to state 63
    aggregate_func  go to state 64
    case_expr       go to state 65


State 47

  187 case_expr: CASE • when_then_list opt_else END

    WHEN  shift, and go to state 81

    when_then_list    go to state 82
    when_then_clause  go to state 83


State 48

  182 aggregate_func: COUNT •

    $default  reduce using rule 182 (aggregate_func)


State 49

  183 aggregate_func: SUM •

    $default  reduce using rule 183 (aggregate_func)


State 50

  184 aggregate_func: AVG •

    $default  reduce using rule 184 (aggregate_func)


State 51

  185 aggregate_func: MIN •

    $default  reduce using rule 185 (aggregate_func)


State 52

  186 aggregate_func: MAX •

    $default  reduce using rule 186 (aggregate_func)


State 53

  171 expr: IDENTIFIER •
  172     | IDENTIFIER • DOT IDENTIFIER
  179 func_call: IDENTIFIER • LPAREN opt_expr_list RPAREN

    LPAREN  shift, and go to state 84
    DOT     shift, and go to state 85

    $default  reduce using rule 171 (expr)


State 54

  173 expr: STRING_LITERAL •

    $default  reduce using rule 173 (expr)


State 55

  174 expr: INT_LITERAL •

    $default  reduce using rule 174 (expr)


State 56

  175 expr: FLOAT_LITERAL •

    $default  reduce using rule 175 (expr)


State 57

  166 expr: MINUS • expr

    NULL_KW         shift, and go to state 45
    NOT_KW          shift, and go to state 46
    CASE            shift, and go to state 47
    COUNT           shift, and go to state 48
    SUM             shift, and go to state 49
    AVG             shift, and go to state 50
    MIN             shift, and go to state 51
    MAX             shift, and go to state 52
    IDENTIFIER      shift, and go to state 53
    STRING_LITERAL  shift, and go to state 54
    INT_LITERAL     shift, and go to state 55
    FLOAT_LITERAL   shift, and go to state 56
    MINUS           shift, and go to state 57
    LPAREN          shift, and go to state 59

    expr            go to state 86
    func_call       go to state 63
    aggregate_func  go to state 64
    case_expr       go to state 65


State 58

   28 target_item: STAR •

    $default  reduce using rule 28 (target_item)


State 59

  167 expr: LPAREN • expr RPAREN
  168     | LPAREN • select_stmt RPAREN

    SELECT          shift, and go to state 1
    NULL_KW         shift, and go to state 45
    NOT_KW          shift, and go to state 46
    CASE            shift, and go to state 47
    COUNT           shift, and go to state 48
    SUM             shift, and go to state 49
    AVG             shift, and go to state 50
    MIN             shift, and go to state 51
    MAX             shift, and go to state 52
    IDENTIFIER      shift, and go to state 53
    STRING_LITERAL  shift, and go to state 54
    INT_LITERAL     shift, and go to state 55
    FLOAT_LITERAL   shift, and go to state 56
    MINUS           shift, and go to state 57
    LPAREN          shift, and go to state 59

    select_stmt     go to state 87
    select_expr     go to state 17
    expr            go to state 88
    func_call       go to state 63
    aggregate_func  go to state 64
    case_expr       go to state 65


State 60

   22 select_expr: SELECT opt_distinct target_list • opt_from opt_where opt_group_by opt_having opt_order_by opt_limit
   26 target_list: target_list • COMMA target_item

    FROM   shift, and go to state 89
    COMMA  shift, and go to state 90

    $default  reduce using rule 34 (opt_from)

    opt_from  go to state 91


State 61

   27 target_list: target_item •

    $default  reduce using rule 27 (target_list)


State 62

   29 target_item: expr • opt_alias
  147 expr: expr • OR expr
  148     | expr • AND expr
  150     | expr • EQ expr
  151     | expr • NE expr
  152     | expr • LT expr
  153     | expr • GT expr
  154     | expr • LE expr
  155     | expr • GE expr
  156     | expr • LIKE expr
  157     | expr • IN LPAREN expr_list RPAREN
  158     | expr • IN LPAREN select_stmt RPAREN
  159     | expr • BETWEEN expr AND expr
  160     | expr • IS NULL_KW
  161     | expr • IS NOT_KW NULL_KW
  162     | expr • PLUS expr
  163     | expr • MINUS expr
  164     | expr • STAR expr
  165     | expr • SLASH expr

    AS          shift, and go to state 92
    AND         shift, and go to state 93
    OR          shift, and go to state 94
    LIKE        shift, and go to state 95
    IN          shift, and go to state 96
    BETWEEN     shift, and go to state 97
    IS          shift, and go to state 98
    IDENTIFIER  shift, and go to state 99
    EQ          shift, and go to state 100
    NE          shift, and go to state 101
    LT          shift, and go to state 102
    GT          shift, and go to state 103
    LE          shift, and go to state 104
    GE          shift, and go to state 105
    PLUS        shift, and go to state 106
    MINUS       shift, and go to state 107
    STAR        shift, and go to state 108
    SLASH       shift, and go to state 109

    $default  reduce using rule 32 (opt_alias)

    opt_alias  go to state 110


State 63

  169 expr: func_call •

    $default  reduce using rule 169 (expr)


State 64

  177 func_call: aggregate_func • LPAREN opt_distinct expr RPAREN
  178          | aggregate_func • LPAREN STAR RPAREN

    LPAREN  shift, and go to state 111


State 65
